fixed lots of minor issues